--- a/src/pages/favoritos.css
+++ b/src/pages/favoritos.css
@@ -69,3 +69,11 @@ ul{
     transform: scale(1.08);
     box-shadow: 0px 0px 10px #3b0000;
 }
+
+
+.aviso{
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    margin-top: 200px;
+}
